--- a/web-thu/newsList.html
+++ b/web-thu/newsList.html
@@ -54,8 +54,8 @@
 		<div class="nav_list">
 			<div class="in">
 				<a href="index.html">首页</a>
-				<a class="active" href="about.html">关于我们</a>
-				<a href="news.html">通知公告</a>
+				<a href="about.html">关于我们</a>
+				<a class="active" href="news.html">通知公告</a>
 				<a href="undergraduate.html">博士项目</a>
 				<a href="report.html">学术报告</a>
 				<a href="recruit.html">招生信息</a>
@@ -77,75 +77,81 @@
 			<h2>新闻中心</h2>
 			<p class="ty-crumbs">当前位置：<a href="">新闻中心</a><a href="">图片新闻</a></p>
 		</div>
-  </div>
+	</div>
 
-  <!-- 新闻列表3-->
-	<section class="ty-new-list2">
-    <div class="list">
-      <a href="newsDetial.html">
-        <img src="./images/new-demo1.png" alt="">
-        <span class="time">MAY<br /><strong>16</strong></span>
-        <div class="detial">
-          <h3>清华经管学院2018级本科生校友导师聘任仪式举行级本科生校友导师聘任仪式举行级本科生校友导师聘任仪式举行级本科生校友导师聘任仪式举行级本科生校友导师聘任仪式举行</h3>
-          <p>学院逐步建立以提升学生职业发展能力为目标，以职业引导及生涯辅导为手段的全方位职业发展教育服务体系。本年度在就业率和契合导为手段的全方位职业发展教育服务体系。本年度在就业率和契合导为手段的全方位职业发展教育服务体系。本年度在就业率和契合导为手段的全方位职业发展教育服务体系。本年度在就业率和契合导为手段的全方位职业发展教育服务体系。本年度在就业率和契合导为手段的全方位职业发展教育服务体系。本年度在就业率和契合导为手段的全方位职业发展教育服务体系。本年度在就业率和契合率持续提升基础上，重点布局改善就业结构和提升就业质量。各相关部门凝心聚力，共同推动了学院就业工作再上新台阶。</p>
-        </div>
-      </a>
-      <a href="newsDetial.html">
-				<img src="./images/new-demo1.png" alt="">
-        <span class="time">MAY<br /><strong>16</strong></span>
-        <div class="detial">
-          <h3>清华经管学院2018级本科生校友导师聘任仪式举行</h3>
-          <p>学院逐步建立以提升学生职业发展能力为目标，以职业引导及生涯辅导为手段的全方位职业发展教育服务体系。本年度在就业率和契合率持续提升基础上，重点布局改善就业结构和提升就业质量。各相关部门凝心聚力，共同推动了学院就业工作再上新台阶。</p>
-        </div>
-      </a>
-      <a href="newsDetial.html">
-				<img src="./images/new-demo2.png" alt="">
-        <span class="time">MAY<br /><strong>16</strong></span>
-        <div class="detial">
-          <h3>清华经管学院2018级本科生校友导师聘任仪式举行</h3>
-          <p>学院逐步建立以提升学生职业发展能力为目标，以职业引导及生涯辅导为手段的全方位职业发展教育服务体系。本年度在就业率和契合率持续提升基础上，重点布局改善就业结构和提升就业质量。各相关部门凝心聚力，共同推动了学院就业工作再上新台阶。</p>
-        </div>
-      </a>
-      <a href="newsDetial.html">
-        <img src="./images/new-demo2.png" alt="">
-        <span class="time">MAY<br /><strong>16</strong></span>
-        <div class="detial">
-          <h3>清华经管学院2018级本科生校友导师聘任仪式举行</h3>
-          <p>学院逐步建立以提升学生职业发展能力为目标，以职业引导及生涯辅导为手段的全方位职业发展教育服务体系。本年度在就业率和契合率持续提升基础上，重点布局改善就业结构和提升就业质量。各相关部门凝心聚力，共同推动了学院就业工作再上新台阶。</p>
-        </div>
-      </a>
-      <a href="newsDetial.html">
-        <img src="./images/new-demo2.png" alt="">
-        <span class="time">MAY<br /><strong>16</strong></span>
-        <div class="detial">
-          <h3>清华经管学院2018级本科生校友导师聘任仪式举行</h3>
-          <p>学院逐步建立以提升学生职业发展能力为目标，以职业引导及生涯辅导为手段的全方位职业发展教育服务体系。本年度在就业率和契合率持续提升基础上，重点布局改善就业结构和提升就业质量。各相关部门凝心聚力，共同推动了学院就业工作再上新台阶。</p>
-        </div>
-      </a>
-      <a href="newsDetial.html">
-        <img src="./images/new-demo2.png" alt="">
-        <span class="time">MAY<br /><strong>16</strong></span>
-        <div class="detial">
-          <h3>清华经管学院2018级本科生校友导师聘任仪式举行</h3>
-          <p>学院逐步建立以提升学生职业发展能力为目标，以职业引导及生涯辅导为手段的全方位职业发展教育服务体系。本年度在就业率和契合率持续提升基础上，重点布局改善就业结构和提升就业质量。各相关部门凝心聚力，共同推动了学院就业工作再上新台阶。</p>
-        </div>
-      </a>
-    </div>
-    <p class="list-nums">
-      <a class="prev" href=""></a>
-      <span class="nums">
-        <a href="">1</a>
-        <a href="">2</a>
-        <a href="">3</a>
-        <a class="active" href="">4</a>
-        <a href="">5</a>
-        <a href="">6</a>
-        <a href="">7</a>
-      </span>
-      <a class="next" href=""></a>
-    </p>
-  </section>
-  
+	<!-- 新闻列表3-->
+	<section class="ty-new-list3">
+		<div class="list">
+			<a href="newsDetial.html">
+				<span class="time">MAY<br /><strong>16</strong></span>
+				<div class="detial">
+					<h3>清华经管学院2018级本科生校友导师聘任仪式科生校友导师聘任仪式科生校友导师聘任仪式科生校友导师聘任仪式科生校友导师聘任仪式科生校友导师聘任仪式举行</h3>
+					<p>
+						学院逐步建立以提升学生职业发展能力为目标，以职业引导及生涯辅导为手段的全方位职业发展教育服务体系。本年度在就业率和契合率持续提升基础上，重点布局改善就业结构和提升就业质量。各相关部门凝心聚力，共同推动了学院就业工作再上新台阶。
+					</p>
+				</div>
+			</a>
+			<a href="newsDetial.html">
+				<span class="time">MAY<br /><strong>16</strong></span>
+				<div class="detial">
+					<h3>清华经管学院2018级本科生校友导师聘任仪式举任仪式举任仪式举行</h3>
+					<p>
+						学院逐步建立以提升学生职业发展能力为目标，以职业引导及生涯辅导为手段的全方位职业发展力为目标，以职业引导及生涯辅导为手段的全方位职业发展力为目标，以职业引导及生涯辅导为手段的全方位职业发展力为目标，以职业引导及生涯辅导为手段的全方位职业发展力为目标，以职业引导及生涯辅导为手段的全方位职业发展力为目标，以职业引导及生涯辅导为手段的全方位职业发展力为目标，以职业引导及生涯辅导为手段的全方位职业发展力为目标，以职业引导及生涯辅导为手段的全方位职业发展力为目标，以职业引导及生涯辅导为手段的全方位职业发展教育服务体系。本年度在就业率和契合率持续提升基础上，重点布局改善就业结构和提升就业质量。各相关部门凝心聚力，共同推动了学院就业工作再上新台阶。
+					</p>
+				</div>
+			</a>
+			<a href="newsDetial.html">
+				<span class="time">MAY<br /><strong>16</strong></span>
+				<div class="detial">
+					<h3>清华经管学院2018级本科生校友导师聘任仪式举行</h3>
+					<p>
+						学院逐步建立以提升学生职业发展能力为目标，以职业引导及生涯辅导为手段的全方位职业发展教育服务体系。本年度在就业率和契合率持续提升基础上，重点布局改善就业结构和提升就业质量。各相关部门凝心聚力，共同推动了学院就业工作再上新台阶。
+					</p>
+				</div>
+			</a>
+			<a href="newsDetial.html">
+				<span class="time">MAY<br /><strong>16</strong></span>
+				<div class="detial">
+					<h3>清华经管学院2018级本科生校友导师聘任仪式举行</h3>
+					<p>
+						学院逐步建立以提升学生职业发展能力为目标，以职业引导及生涯辅导为手段的全方位职业发展教育服务体系。本年度在就业率和契合率持续提升基础上，重点布局改善就业结构和提升就业质量。各相关部门凝心聚力，共同推动了学院就业工作再上新台阶。
+					</p>
+				</div>
+			</a>
+			<a href="newsDetial.html">
+				<span class="time">MAY<br /><strong>16</strong></span>
+				<div class="detial">
+					<h3>清华经管学院2018级本科生校友导师聘任仪式举行</h3>
+					<p>
+						学院逐步建立以提升学生职业发展能力为目标，以职业引导及生涯辅导为手段的全方位职业发展教育服务体系。本年度在就业率和契合率持续提升基础上，重点布局改善就业结构和提升就业质量。各相关部门凝心聚力，共同推动了学院就业工作再上新台阶。
+					</p>
+				</div>
+			</a>
+			<a href="newsDetial.html">
+				<span class="time">MAY<br /><strong>16</strong></span>
+				<div class="detial">
+					<h3>清华经管学院2018级本科生校友导师聘任仪式举行</h3>
+					<p>
+						学院逐步建立以提升学生职业发展能力为目标，以职业引导及生涯辅导为手段的全方位职业发展教育服务体系。本年度在就业率和契合率持续提升基础上，重点布局改善就业结构和提升就业质量。各相关部门凝心聚力，共同推动了学院就业工作再上新台阶。
+					</p>
+				</div>
+			</a>
+		</div>
+		<p class="list-nums">
+			<a class="prev" href=""></a>
+			<span class="nums">
+				<a href="">1</a>
+				<a class="active" href="">2</a>
+				<a href="">3</a>
+				<a href="">4</a>
+				<a href="">5</a>
+				<a href="">6</a>
+				<a href="">7</a>
+			</span>
+			<a class="next" href=""></a>
+		</p>
+	</section>
+
 	<!-- 底部 -->
 	<footer>
 		<div class="container">
@@ -166,8 +172,8 @@
 			<div class="footer_botttom">
 				<div class="line_bottom"></div>
 				<p class="fl">版权所有：清华大学经济管理学院</p>
-				<p class="fr"><a href="javascript:;">网站地图&nbsp;&nbsp;</a>/<a href="javascript:;">&nbsp;&nbsp;联系我们&nbsp;&nbsp;</a>/<a
-					 href="javascript:;">&nbsp;&nbsp;清华大学主页</a></p>
+				<p class="fr"><a href="javascript:;">网站地图&nbsp;&nbsp;</a>/<a
+						href="javascript:;">&nbsp;&nbsp;联系我们&nbsp;&nbsp;</a>/<a href="javascript:;">&nbsp;&nbsp;清华大学主页</a></p>
 			</div>
 		</div>
 	</footer>
@@ -176,4 +182,5 @@
 	<script src="./js/swiper.min.js"></script>
 	<script src="js/app.js"></script>
 </body>
+
 </html>
