--- a/web-thu/recruit.html
+++ b/web-thu/recruit.html
@@ -55,11 +55,11 @@
         <div class="nav_list">
             <div class="in">
                 <a href="index.html">首页</a>
-                <a class="active" href="about.html">关于我们</a>
+                <a href="about.html">关于我们</a>
                 <a href="news.html">通知公告</a>
                 <a href="undergraduate.html">博士项目</a>
                 <a href="report.html">学术报告</a>
-                <a href="recruit.html">招生信息</a>
+                <a class="active" href="recruit.html">招生信息</a>
                 <a href="development.html">就业发展</a>
             </div>
             <i class="f-ifont close for-mobile">&#xe62b;</i>
@@ -79,13 +79,17 @@
             <h2>招生信息</h2>
         </div>
         <div class="nav-list">
-            <span data-to="ty-zs">招生指南</span>
-            <span data-to="ty-download">文件下载</span>
+            <span data-to="ty-zs">直博生</span>
+            <span data-to="ty-download">普博生</span>
+            <span data-to="ty-download">港澳台学生</span>
+            <span data-to="ty-download">国际学生</span>
+            <span data-to="ty-download">联系我们</span>
         </div>
     </div>
 
     <!-- 直博生 -->
     <div class="ty-zs-doc">
+        <div class="ty-title">直博生</div>
         <div class="main">
             <div class="step">
                 <img src="./images-2/zs-1.png" alt="">
@@ -147,6 +151,7 @@
 
     <!-- 普博生 -->
     <div class="ty-zs-doc ty-zs-doc-2">
+        <div class="ty-title">普博生</div>
         <div class="main">
             <div class="step">
                 <img src="./images-2/zs-2.png" alt="">
@@ -237,7 +242,7 @@
     </div>
 
     <div class="ty-connect-zs">
-        <h3 class="ty-title">国际学生</h3>
+        <h3 class="ty-title">联系我们</h3>
 
         <div class="in">
             <h3>教学办公室（博士及研究型硕士专业方向）</h3>
