--- a/web-thu/report.html
+++ b/web-thu/report.html
@@ -56,10 +56,10 @@
             <div class="nav_list">
                 <div class="in">
                     <a href="index.html">首页</a>
-                    <a class="active" href="about.html">关于我们</a>
+                    <a href="about.html">关于我们</a>
                     <a href="news.html">通知公告</a>
                     <a href="undergraduate.html">博士项目</a>
-                    <a href="report.html">学术报告</a>
+                    <a class="active" href="report.html">学术报告</a>
                     <a href="recruit.html">招生信息</a>
                     <a href="development.html">就业发展</a>
                 </div>
@@ -81,6 +81,7 @@
         <div class="container-2">
             <h2>学术报告</h2>
         </div>
+        <div class="nav-list bg-white"></div>
     </div>
 
     <!-- 列表2 -->
@@ -123,65 +124,65 @@
 
     <section class="ty-report-list">
         <div class="list">
-            <ul>
+            <ul class="clearfix">
                 <li>
                     <a href="">
                         <span class="time">2019-9-14</span>
-                        <span>清华经管学院2018级本科生校友导师聘任仪式举行</span>
+                        <span class="text">清华经管学院2018级本科生校友导师聘任仪式举行</span>
                     </a>
                 </li>
                 <li>
                     <a href="">
                         <span class="time">2019-9-14</span>
-                        <span>清华经管学院2018级本科生校友导师聘任仪式举行</span>
+                        <span class="text">清华经管学院2018级本科生校友导师聘任仪式举行</span>
                     </a>
                 </li>
                 <li>
                     <a href="">
                         <span class="time">2019-9-14</span>
-                        <span>清华经管学院2018级本科生校友导师聘任仪式举行</span>
+                        <span class="text">清华经管学院2018级本科生校友导师聘任仪式举行</span>
                     </a>
                 </li>
                 <li>
                     <a href="">
                         <span class="time">2019-9-14</span>
-                        <span>清华经管学院2018级本科生校友导师聘任仪式举行</span>
+                        <span class="text">清华经管学院2018级本科生校友导师聘任仪式举行</span>
                     </a>
                 </li>
                 <li>
                     <a href="">
                         <span class="time">2019-9-14</span>
-                        <span>清华经管学院2018级本科生校友导师聘任仪式举行</span>
+                        <span class="text">清华经管学院2018级本科生校友导师聘任仪式举行</span>
                     </a>
                 </li>
                 <li>
                     <a href="">
                         <span class="time">2019-9-14</span>
-                        <span>清华经管学院2018级本科生校友导师聘任仪式举行</span>
+                        <span class="text">清华经管学院2018级本科生校友导师聘任仪式举行</span>
                     </a>
                 </li>
                 <li>
                     <a href="">
                         <span class="time">2019-9-14</span>
-                        <span>清华经管学院2018级本科生校友导师聘任仪式举行</span>
+                        <span class="text">清华经管学院2018级本科生校友导师聘任仪式举行</span>
                     </a>
                 </li>
                 <li>
                     <a href="">
                         <span class="time">2019-9-14</span>
-                        <span>清华经管学院2018级本科生校友导师聘任仪式举行</span>
+                        <span class="text">清华经管学院2018级本科生校友导师聘任仪式举行</span>
                     </a>
                 </li>
                 <li>
                     <a href="">
                         <span class="time">2019-9-14</span>
-                        <span>清华经管学院2018级本科生校友导师聘任仪式举行</span>
+                        <span class="text">清华经管学院2018级本科生校友导师聘任仪式举行</span>
                     </a>
                 </li>
                 <li>
                     <a href="">
                         <span class="time">2019-9-14</span>
-                        <span>清华经管学院2018级本科生校友导师聘任仪式举行</span>
+                        <span class="text">清华经管学院2018级本科生校友导师聘任仪式举行</span>
                     </a>
                 </li>
             </ul>
