--- a/web-thu/undergraduate.html
+++ b/web-thu/undergraduate.html
@@ -78,15 +78,19 @@
       <h2>本科教学</h2>
     </div>
     <div class="nav-list">
-      <span data-to="ty-ugd-set">专业设置</span>
-      <span data-to="ty-ugd-programme">培养方案</span>
-      <span data-to="ty-ugd-course">课程信息</span>
+      <span data-to="ty-ugd-set">会计学</span>
+      <span data-to="ty-ugd-programme">经济学</span>
+      <span data-to="ty-ugd-course">金融学</span>
+      <span data-to="ty-ugd-course">创新创业与战略</span>
+      <span data-to="ty-ugd-course">领导力与组织管理</span>
+      <span data-to="ty-ugd-course">管理科学与工程</span>
+      <span data-to="ty-ugd-course">市场营销</span>
     </div>
   </div>
 
   <!-- 博士项目 -->
   <div class="ty-product-list">
-    <ul>
+    <ul class="clearfix">
       <li>
         <img src="./images-2/doc-1.png"/>
         <div class="in">
