--- a/web-thu/development.html
+++ b/web-thu/development.html
@@ -56,12 +56,12 @@
 			<div class="nav_list">
 				<div class="in">
 					<a href="index.html">首页</a>
-					<a class="active" href="about.html">关于我们</a>
+					<a href="about.html">关于我们</a>
 					<a href="news.html">通知公告</a>
 					<a href="undergraduate.html">博士项目</a>
 					<a href="report.html">学术报告</a>
 					<a href="recruit.html">招生信息</a>
-					<a href="development.html">就业发展</a>
+					<a class="active" href="development.html">就业发展</a>
 				</div>
 				<i class="f-ifont close for-mobile">&#xe62b;</i>
 				<div class="serach-div">
@@ -78,10 +78,11 @@
 	<div class="ty-banner">
 		<img class="banner-img" src="./images-2/dev-top.png" alt="">
 		<div class="container-2">
-			<h2>职业发展</h2>
+			<h2>就业发展</h2>
 		</div>
 		<div class="nav-list">
-			<span data-to="ty-guidance">就业指导</span>
+			<span data-to="ty-guidance">就业服务</span>
+			<span data-to="ty-guidance">历年情况</span>
 		</div>
 	</div>
 
