--- a/web-thu/recruit.html
+++ b/web-thu/recruit.html
@@ -118,7 +118,7 @@
                         </div>
                     </li>
                     <li>
-                        <div class="point"><em>拟录取</em><span>完成推免手续</span></div>
+                        <div class="point"><em>拟录取<span>完成推免手续</span></em></div>
                         <div class="detial">
                             <p class="one">
                                 每年9月下旬-11月上旬
@@ -129,7 +129,7 @@
                         </div>
                     </li>
                     <li>
-                        <div class="point"><em>正式录取</em></div>
+                        <div class="point"><em>正式<br />录取</em></div>
                         <div class="detial">
                             <p class="one">
                                 次年5月下旬-6月下旬
@@ -182,7 +182,7 @@
                         </div>
                     </li>
                     <li>
-                        <div class="point"><em>拟录取</em><span>完成推免手续</span></div>
+                        <div class="point"><em>拟录取<span>完成推免手续</span></em></div>
                         <div class="detial">
                             <p class="second">
                                 <span>第一批<br />7月中旬</span>
@@ -194,7 +194,7 @@
                         </div>
                     </li>
                     <li>
-                        <div class="point"><em>正式录取</em></div>
+                        <div class="point"><em>正式<br />录取</em></div>
                         <div class="detial">
                             <p class="one">
                                 次年5月下旬-6月下旬
@@ -218,7 +218,7 @@
     <div class="ty-china">
         <h3 class="ty-title">港澳台学生</h3>
 
-        <div class="in">
+        <div class="ty-public-div in">
             <img src="./images-2/zs-3.png" alt="">
             <div class="detial">
                 <p>清华大学经济管理学院博士项目的培养理念为“追求真理，崇尚科学”。清华经管学院博士项目招收具有学术研究潜质的优秀学生，每年7月和9月招生，标准学制为3至5年，仅招收脱产攻读的博士研究生。清华经管学院充分利用多学科优势，力争培养顶尖的经济类和管理类的学术研究人才，特别是国内外重点高校教师。从2009年开始，清华经管学院推进了多项博士生培养环节的改革，以提高博士生培养的质量。清华经管学院博士项目教育改革集中在四方面......
@@ -231,7 +231,7 @@
     <div class="ty-china ty-abort">
         <h3 class="ty-title">国际学生</h3>
 
-        <div class="in">
+        <div class="ty-public-div ty-public-div2 in">
             <img src="./images-2/zs-4.png" alt="">
             <div class="detial">
                 <p>清华大学经济管理学院博士项目的培养理念为“追求真理，崇尚科学”。清华经管学院博士项目招收具有学术研究潜质的优秀学生，每年7月和9月招生，标准学制为3至5年，仅招收脱产攻读的博士研究生。清华经管学院充分利用多学科优势，力争培养顶尖的经济类和管理类的学术研究人才，特别是国内外重点高校教师。从2009年开始，清华经管学院推进了多项博士生培养环节的改革，以提高博士生培养的质量。清华经管学院博士项目教育改革集中在四方面......
@@ -242,6 +242,7 @@
     </div>
 
     <div class="ty-connect-zs">
+        <img src="./images-2/zs-bottom.png" alt="">
         <h3 class="ty-title">联系我们</h3>
 
         <div class="in">
