--- a/web-thu/undergraduate.html
+++ b/web-thu/undergraduate.html
@@ -54,9 +54,9 @@
     <div class="nav_list">
       <div class="in">
         <a href="index.html">首页</a>
-        <a class="active" href="about.html">关于我们</a>
+        <a href="about.html">关于我们</a>
         <a href="news.html">通知公告</a>
-        <a href="undergraduate.html">博士项目</a>
+        <a class="active" href="undergraduate.html">博士项目</a>
         <a href="report.html">学术报告</a>
         <a href="recruit.html">招生信息</a>
         <a href="development.html">就业发展</a>
