--- a/web-thu/development.html
+++ b/web-thu/development.html
@@ -86,10 +86,10 @@
 		</div>
 	</div>
 
-	<div class="ty-china">
+	<div class="ty-dev">
 		<h3 class="ty-title">就业服务</h3>
 
-		<div class="in">
+		<div class="ty-public-div in">
 			<img src="./images-2/dev-1.png" alt="">
 			<div class="detial">
 				<h3>职业发展中心</h3>
