--- a/web-thu/about.html
+++ b/web-thu/about.html
@@ -82,8 +82,8 @@
 		</div>
 		<div class="nav-list">
 			<span data-to="ty-dean">院长致辞</span>
-			<span data-to="ty-products">学院简介</span>
-			<span data-to="ty-general">研究生改革</span>
+			<span data-to="ty-training">学院简介</span>
+			<span data-to="ty-connect">联系我们</span>
 		</div>
 	</div>
 	<!-- 院长致辞 -->
@@ -98,9 +98,12 @@
 
 		<div class="dean-say fr">
 			<h3 class="ty-title">院长致辞</h3>
-			<p>我衷心地欢迎同学们申报清华大学经济管理学院的博士项目。最近几年来，清华经管学院在博士教育方面进行了大力度的改革，严格控制博士生培养质量，取得了突破性的进展。近几年的实践也证明，从清华经管走出的博士水平很高，能够适应国内外高水平的科研与就业要求。</p>
-			<p>经管学院配备有高水平的教师队伍，也有来自海外的访问教授，在清华经管，同学们可以享受高质量的教师资源，享受与优秀学者争锋的快乐。同时，我们提高了博士生奖助学金，减少同学们的生活负担，并且提供海外学习和参加国际学术会议的机会。</p>
-			<p>经管学院的使命是：创造知识、培养领袖、贡献中国、影响世界；我们为博士项目确立的教育理念是“追求真理、崇尚科学”。我们鼓励有志于学术追求的博士同学们在学期间不仅要有学习知识的能力，同时也要有创造知识的能力，至少为未来创造知识打下扎实的基础。</p>
+			<p>我衷心地欢迎同学们申报清华大学经济管理学院的博士项目。最近几年来，清华经管学院在博士教育方面进行了大力度的改革，严格控制博士生培养质量，取得了突破性的进展。近几年的实践也证明，从清华经管走出的博士水平很高，能够适应国内外高水平的科研与就业要求。
+			</p>
+			<p>经管学院配备有高水平的教师队伍，也有来自海外的访问教授，在清华经管，同学们可以享受高质量的教师资源，享受与优秀学者争锋的快乐。同时，我们提高了博士生奖助学金，减少同学们的生活负担，并且提供海外学习和参加国际学术会议的机会。
+			</p>
+			<p>经管学院的使命是：创造知识、培养领袖、贡献中国、影响世界；我们为博士项目确立的教育理念是“追求真理、崇尚科学”。我们鼓励有志于学术追求的博士同学们在学期间不仅要有学习知识的能力，同时也要有创造知识的能力，至少为未来创造知识打下扎实的基础。
+			</p>
 			<p>我祝愿大家在读博的路上能够喜欢研究的过程，享受研究的过程，不仅在研究上有丰硕的成果，也收获在研究过程中带来的乐趣。</p>
 			<img class="write-img" src="./images/new/name.png" alt="">
 		</div>
@@ -108,34 +111,48 @@
 
 	<!-- 学院简介 -->
 	<div class="ty-training">
-		<h3 class="ty-title">学院简介</h3>
-		<div class="about-list">
-			<ul>
-				<li>
+		<h3 class="ty-title"><i class="prev-icon"></i>学院简介<i class="next-icon"></i></h3>
+		<div class="about-list swiper-container">
+			<div class="swiper-wrapper clearfix">
+				<div class="swiper-slide">
 					<em class="index">.01</em>
-					<em class="tag"></em>
+					<em class="tag">清华经管优势</em>
 					<a class="ty-more-2" href="">查看更多 ></a>
 					<p>率先获得AACSB和EQUIS两大全球管理教育顶级认证的中国内地商学院</p>
-				</li>
-				<li>
-					<em class="index">.01</em>
-					<em class="tag"></em>
+				</div>
+				<div class="swiper-slide">
+					<em class="index">.02</em>
+					<em class="tag">清华经管优势</em>
 					<a class="ty-more-2" href="">查看更多 ></a>
 					<p>率先获得AACSB和EQUIS两大全球管理教育顶级认证的中国内地商学院</p>
-				</li>
-				<li>
-					<em class="index">.01</em>
-					<em class="tag"></em>
+				</div>
+				<div class="swiper-slide">
+					<em class="index">.03</em>
+					<em class="tag">清华经管优势</em>
 					<a class="ty-more-2" href="">查看更多 ></a>
 					<p>率先获得AACSB和EQUIS两大全球管理教育顶级认证的中国内地商学院</p>
-				</li>
-			</ul>
+				</div>
+				<div class="swiper-slide">
+					<em class="index">.04</em>
+					<em class="tag">清华经管优势</em>
+					<a class="ty-more-2" href="">查看更多 ></a>
+					<p>率先获得AACSB和EQUIS两大全球管理教育顶级认证的中国内地商学院</p>
+				</div>
+				<div class="swiper-slide">
+						<em class="index">.05</em>
+						<em class="tag">清华经管优势</em>
+						<a class="ty-more-2" href="">查看更多 ></a>
+						<p>率先获得AACSB和EQUIS两大全球管理教育顶级认证的中国内地商学院</p>
+					</div>
+			</div>
+
+			<div class="ty-bolls"></div>
 		</div>
 	</div>
 
 	<!-- 联系我们 -->
 	<div class="ty-connect">
-			<h3 class="ty-title">联系我们</h3>
+		<h3 class="ty-title">联系我们</h3>
 
 		<img src="images-2/about-connect.png" alt="">
 
@@ -183,7 +200,7 @@
 	<script src="js/app.js"></script>
 	<script>
 		if (document.body.clientWidth >= 1024) {
-			var swiperProducts = new Swiper('.ty-products-con', {
+			var swiperProducts = new Swiper('.about-list', {
 				slidesPerView: 'auto',
 				pagination: {
 					el: '.ty-bolls',
@@ -196,12 +213,12 @@
 					delay: 3000
 				},
 				navigation: {
-					nextEl: '.ty-products-in .next-icon',
-					prevEl: '.ty-products-in .prev-icon',
+					nextEl: '.ty-training .next-icon',
+					prevEl: '.ty-training .prev-icon',
 				}
 			});
 		} else {
-			var swiperProducts = new Swiper('.ty-products-con', {
+			var swiperProducts = new Swiper('.about-list', {
 				slidesPerView: 'auto',
 				pagination: {
 					el: '.ty-bolls',
@@ -214,13 +231,13 @@
 					delay: 3000
 				},
 				navigation: {
-					nextEl: '.ty-products-in .next-icon',
-					prevEl: '.ty-products-in .prev-icon',
+					nextEl: '.about-list .next-icon',
+					prevEl: '.about-list .prev-icon',
 				}
 			});
 		}
 
-		$(".ty-products-con").mouseenter(function () {
+		$(".about-list").mouseenter(function () {
 			swiperProducts.autoplay.stop();
 		}).mouseleave(function () {
 			swiperProducts.autoplay.start();
