--- a/web-thu/development.html
+++ b/web-thu/development.html
@@ -81,8 +81,8 @@
 			<h2>就业发展</h2>
 		</div>
 		<div class="nav-list">
-			<span data-to="ty-guidance">就业服务</span>
-			<span data-to="ty-guidance">历年情况</span>
+			<span data-to="ty-dev">就业服务</span>
+			<span data-to="ty-years">历年情况</span>
 		</div>
 	</div>
 
@@ -166,23 +166,26 @@
 					<a href="">
 						<span class="time">2018/10/05</span>
 						<h3>2018届毕业生就业报告 </h3>
-						<p>2018年7月1日，为庆祝中国共产党建党97周年，弘扬不畏艰难，艰苦奋斗的时代精神，传承为人民服务，感恩奋进的历史使命，我们十分荣幸地参与了中国农业银行雷山县支行...</p>
+						<p>2018年7月1日，为庆祝中国共产党建党97周年，弘扬不畏艰难，艰苦奋斗的时代精神，艰苦奋斗的时代精神，艰苦奋斗的时代精神，传承为人民服务，感恩奋进的历史使命，我们十分荣幸地参与了中国农业银行雷山县支行...
+						</p>
 					</a>
 				</li>
 				<li>
-						<a href="">
-							<span class="time">2018/10/05</span>
-							<h3>2018届毕业生就业报告 </h3>
-							<p>2018年7月1日，为庆祝中国共产党建党97周年，弘扬不畏艰难，艰苦奋斗的时代精神，传承为人民服务，感恩奋进的历史使命，我们十分荣幸地参与了中国农业银行雷山县支行...</p>
-						</a>
-					</li>
-					<li>
-							<a href="">
-								<span class="time">2018/10/05</span>
-								<h3>2018届毕业生就业报告 </h3>
-								<p>2018年7月1日，为庆祝中国共产党建党97周年，弘扬不畏艰难，艰苦奋斗的时代精神，传承为人民服务，感恩奋进的历史使命，我们十分荣幸地参与了中国农业银行雷山县支行...</p>
-							</a>
-						</li>
+					<a href="">
+						<span class="time">2018/10/05</span>
+						<h3>2018届毕业生就业报告 </h3>
+						<p>2018年7月1日，为庆祝中国共产党建党97周年，弘扬不畏艰难，艰苦奋斗的时代精神，艰苦奋斗的时代精神，艰苦奋斗的时代精神，传承为人民服务，感恩奋进的历史使命，我们十分荣幸地参与了中国农业银行雷山县支行...
+						</p>
+					</a>
+				</li>
+				<li>
+					<a href="">
+						<span class="time">2018/10/05</span>
+						<h3>2018届毕业生就业报告 </h3>
+						<p>2018年7月1日，为庆祝中国共产党建党97周年，弘扬不畏艰难，艰苦奋斗的时代精神，艰苦奋斗的时代精神，艰苦奋斗的时代精神，传承为人民服务，感恩奋进的历史使命，我们十分荣幸地参与了中国农业银行雷山县支行...
+						</p>
+					</a>
+				</li>
 			</ul>
 			<a class="ty-more" href="">查看更多</a>
 		</div>
