--- a/web-thu/recruit.html
+++ b/web-thu/recruit.html
@@ -79,16 +79,16 @@
             <h2>招生信息</h2>
         </div>
         <div class="nav-list">
-            <span data-to="ty-zs">直博生</span>
-            <span data-to="ty-download">普博生</span>
-            <span data-to="ty-download">港澳台学生</span>
-            <span data-to="ty-download">国际学生</span>
-            <span data-to="ty-download">联系我们</span>
+            <span data-to="ty-zs-doc-1">直博生</span>
+            <span data-to="ty-zs-doc-2">普博生</span>
+            <span data-to="ty-china-hk">港澳台学生</span>
+            <span data-to="ty-abort">国际学生</span>
+            <span data-to="ty-connect-zs">联系我们</span>
         </div>
     </div>
 
     <!-- 直博生 -->
-    <div class="ty-zs-doc">
+    <div class="ty-zs-doc ty-zs-doc-1">
         <div class="ty-title">直博生</div>
         <div class="main">
             <div class="step">
@@ -215,7 +215,7 @@
         </div>
     </div>
 
-    <div class="ty-china">
+    <div class="ty-china ty-china-hk">
         <h3 class="ty-title">港澳台学生</h3>
 
         <div class="ty-public-div in">
