--- a/web-thu/undergraduate.html
+++ b/web-thu/undergraduate.html
@@ -78,85 +78,85 @@
       <h2>本科教学</h2>
     </div>
     <div class="nav-list">
-      <span data-to="ty-ugd-set">会计学</span>
-      <span data-to="ty-ugd-programme">经济学</span>
-      <span data-to="ty-ugd-course">金融学</span>
-      <span data-to="ty-ugd-course">创新创业与战略</span>
-      <span data-to="ty-ugd-course">领导力与组织管理</span>
-      <span data-to="ty-ugd-course">管理科学与工程</span>
-      <span data-to="ty-ugd-course">市场营销</span>
+      <span data-to="zy-1">会计学</span>
+      <span data-to="zy-2">经济学</span>
+      <span data-to="zy-3">金融学</span>
+      <span data-to="zy-4">创新创业与战略</span>
+      <span data-to="zy-5">领导力与组织管理</span>
+      <span data-to="zy-6">管理科学与工程</span>
+      <span data-to="zy-7">市场营销</span>
     </div>
   </div>
 
   <!-- 博士项目 -->
   <div class="ty-product-list">
     <ul class="clearfix">
-      <li>
+      <li class="zy-1">
         <img src="./images-2/doc-1.png"/>
         <div class="in">
           <span class="num">.01</span>
           <h3>会计学</h3>
           <p class="text">致力于培养能够在国内外高等院校和科研机构以及政府部门、大型国企和资本市场相关机构从事研究工作、解决实际问题的高素质会计人才。</p>
           <p class="tags">
-            <em>专业优势</em>
-            <em>培养方案</em>
-            <em>师资力量</em>
+            <em><a href="">专业优势</a></em>
+            <em><a href="">培养方案</a></em>
+            <em><a href="">师资力量</a></em>
           </p>
         </div>
       </li>
-      <li>
+      <li class="zy-2">
         <img src="./images-2/doc-2.png"/>
         <div class="in">
           <span class="num">.02</span>
           <h3>经济学</h3>
           <p class="text">研究方向包括微观经-济学、宏观经-济学、数量经-济学、金融学、财政学、产业经-济学和国际经-济学等。</p>
           <p class="tags">
-            <em>专业优势</em>
-            <em>培养方案</em>
-            <em>师资力量</em>
+            <em><a href="">专业优势</a></em>
+            <em><a href="">培养方案</a></em>
+            <em><a href="">师资力量</a></em>
           </p>
         </div>
       </li>
-      <li>
+      <li class="zy-3">
         <img src="./images-2/doc-3.png"/>
         <div class="in">
           <span class="num">.03</span>
           <h3>金融学</h3>
           <p class="text">包括公司金融、资产定价、金融工程、银行与金融机构、市场微观结构、行为金融、金融计量、保险与精算、国际贸易与金融等。</p>
           <p class="tags">
-            <em>专业优势</em>
-            <em>培养方案</em>
-            <em>师资力量</em>
+            <em><a href="">专业优势</a></em>
+            <em><a href="">培养方案</a></em>
+            <em><a href="">师资力量</a></em>
           </p>
         </div>
       </li>
-      <li>
+      <li class="zy-4">
         <img src="./images-2/doc-4.png"/>
         <div class="in">
           <span class="num">.04</span>
           <h3>创新创业与战略</h3>
           <p class="text">创新创业与战略博士项目致力于培养创新创业与战略管理领域的高端学术人才和中国最优秀的管理人才。</p>
           <p class="tags">
-            <em>专业优势</em>
-            <em>培养方案</em>
-            <em>师资力量</em>
+            <em><a href="">专业优势</a></em>
+            <em><a href="">培养方案</a></em>
+            <em><a href="">师资力量</a></em>
           </p>
         </div>
       </li>
-      <li>
+      <li class="zy-5">
         <img src="./images-2/doc-5.png"/>
         <div class="in">
           <span class="num">.05</span>
           <h3>领导力与组织管理</h3>
           <p class="text">包括组织学习和学习型组织、组织文化管理、战略人力资源管理、领导行为、团队管理、人力资源开发与管理、绩效与薪酬管理等。</p>
           <p class="tags">
-            <em>专业优势</em>
-            <em>培养方案</em>
-            <em>师资力量</em>
+            <em><a href="">专业优势</a></em>
+            <em><a href="">培养方案</a></em>
+            <em><a href="">师资力量</a></em>
           </p>
         </div>
       </li>
-      <li>
+      <li class="zy-6">
         <img src="./images-2/doc-6.png"/>
         <div class="in">
           <span class="num">.06</span>
@@ -164,22 +164,22 @@
           <p class="text">前身为清华大学管理工程系，于1979年成立，并开始招收管理工程专业研究生，1981年获得“系统工程”博士授予权。1985 年，建立管理科学与工程博士后流动站。
           </p>
           <p class="tags">
-            <em>专业优势</em>
-            <em>培养方案</em>
-            <em>师资力量</em>
+            <em><a href="">专业优势</a></em>
+            <em><a href="">培养方案</a></em>
+            <em><a href="">师资力量</a></em>
           </p>
         </div>
       </li>
-      <li>
-        <img src="./images-2/doc-6.png"/>
+      <li class="zy-7">
+        <img src="./images-2/doc-7.png"/>
         <div class="in">
           <span class="num">.07</span>
           <h3>市场营销</h3>
           <p class="text">包括消费者行为、营销模型和营销定量分析方法、营销战略，涵盖大数据营销、网络营销、零售管理、渠道管理、品牌管理、整合营销沟通等。</p>
           <p class="tags">
-            <em>专业优势</em>
-            <em>培养方案</em>
-            <em>师资力量</em>
+            <em><a href="">专业优势</a></em>
+            <em><a href="">培养方案</a></em>
+            <em><a href="">师资力量</a></em>
           </p>
         </div>
       </li>
