--- a/web-thu/about.html
+++ b/web-thu/about.html
@@ -231,8 +231,8 @@
 					delay: 3000
 				},
 				navigation: {
-					nextEl: '.about-list .next-icon',
-					prevEl: '.about-list .prev-icon',
+					nextEl: '.ty-training .next-icon',
+					prevEl: '.ty-training .prev-icon',
 				}
 			});
 		}
