--- a/web-thu/index.html
+++ b/web-thu/index.html
@@ -79,25 +79,25 @@
 				<div class="swiper-slide">
 					<a href="javascript:;">
 						<img src="./images/swiper1_02.png">
-						<div class="center"><span>博士毕业生张佳敏在清华经管学院2018毕业典礼上的发言</span></div>
+						<div class="center"><i class="prev-icon for-mobile"></i><i class="next-icon for-mobile"></i><span>博士毕业生张佳敏在清华经管学院2018毕业典礼上的发言</span></div>
 					</a>
 				</div>
 				<div class="swiper-slide">
 					<a href="javascript:;">
 						<img src="./images/swiper2_02.png">
-						<div class="center"><span>博士毕业生张佳敏在清华经管学院2018毕业典礼上的发言</span></div>
+						<div class="center"><i class="prev-icon for-mobile"></i><i class="next-icon for-mobile"></i><span>博士毕业生张佳敏在清华经管学院2018毕业典礼上的发言</span></div>
 					</a>
 				</div>
 				<div class="swiper-slide">
 					<a href="javascript:;">
 						<img src="./images/swiper3_02.png">
-						<div class="center"><span>博士毕业生张佳敏在清华经管学院2018毕业典礼上的发言</span></div>
+						<div class="center"><i class="prev-icon for-mobile"></i><i class="next-icon for-mobile"></i><span>博士毕业生张佳敏在清华经管学院2018毕业典礼上的发言</span></div>
 					</a>
 				</div>
 				<div class="swiper-slide">
 					<a href="javascript:;">
 						<img src="./images/swiper4_02.png">
-						<div class="center"><span>博士毕业生张佳敏在清华经管学院2018毕业典礼上的发言</span></div>
+						<div class="center"><i class="prev-icon for-mobile"></i><i class="next-icon for-mobile"></i><span>博士毕业生张佳敏在清华经管学院2018毕业典礼上的发言</span></div>
 					</a>
 				</div>
 
