--- a/web-thu/index.html
+++ b/web-thu/index.html
@@ -263,7 +263,7 @@
 				</div>
 			</a>
 		</div>
-		<p class="add-more"><a class="ty-more" href="newsList.html">查看更多</a></p>
+		<p class="add-more"><a class="ty-more" href="./report.html">查看更多</a></p>
 	</section>
 
 	<footer>
