--- a/web-thu/recruit.html
+++ b/web-thu/recruit.html
@@ -246,14 +246,12 @@
         <h3 class="ty-title">联系我们</h3>
 
         <div class="in">
-            <h3>教学办公室（博士及研究型硕士专业方向）</h3>
+            <h3>教学办公室</h3>
             <p>
-                地 址：北京市海淀区清华大学经济管理学院伟伦楼116室<br />
+                地 址：北京市海淀区清华大学经济管理学院伟伦楼103室<br />
                 邮 编：100084<br />
                 电 话：（8610）6279 5329<br />
                 E-mail：pgadmit@sem.tsinghua.edu.cn<br />
-                网 址：http://www.sem.tsinghua.edu.cn/portalweb/appmanager/portal/pg<br />
-                微 博：http://weibo.com/u/2820242187
             </p>
         </div>
     </div>
