--- a/web-thu/undergraduate.html
+++ b/web-thu/undergraduate.html
@@ -75,7 +75,7 @@
   <div class="ty-banner">
     <img class="banner-img" src="./images-2/doctor-top.png" alt="">
     <div class="container-2">
-      <h2>本科教学</h2>
+      <h2>博士项目</h2>
     </div>
     <div class="nav-list">
       <span data-to="zy-1">会计学</span>
