--- a/web-tsu2/index.html
+++ b/web-tsu2/index.html
@@ -54,15 +54,15 @@
 		<div class="nav_list">
 			<div class="in">
 				<a class="active" href="index.html">首页</a>
+				<a href="project.html">教学项目</a>
+				<a href="apply.html">申报指南</a>
 				<a href="about.html">关于我们</a>
+				<a href="practice.html">项目活动</a>
+				<a href="development.html">职业发展</a>
 				<a href="teachers.html">师资力量</a>
-				<a href="news.html">新闻中心</a>
 				<a href="undergraduate.html">本科教学</a>
 				<a href="school.html">校园生活</a>
-				<a href="practice.html">社会实践</a>
 				<a href="abort.html">国际合作</a>
-				<a href="recruit.html">招生信息</a>
-				<a href="development.html">职业发展</a>
 			</div>
 			<i class="f-ifont close for-mobile">&#xe62b;</i>
 			<div class="serach-div">
@@ -112,116 +112,6 @@
 			<div class="swiper-button-next right"></div>
 		</div>
 	</section>
-	<!-- 内容部分 -->
-	<section class="content container clearfix">
-		<a href="" class="content_left fl">
-			<div class="top">
-				<span>本科教学</span>
-				<span class="one_cut">信息管理与信息系统专业</span>
-			</div>
-			<p class="center four_cut">培养把握数字经济时代的商务活动规律，能够开发和运用信息技术及数理方法以优化管理、提升绩效、引领创新的复合型管理人才。</p>
-			<div class="bottom">
-				<span>专业优势</span>
-				<span>培养方案</span>
-				<span>师资力量</span>
-			</div>
-		</a>
-		<a href="" class="content_left fl">
-			<div class="top">
-				<span>本科教学</span>
-				<span class="one_cut">经济与金融专业</span>
-			</div>
-			<p class="center four_cut">培养既掌握系统的经济学与金融学理论和分析方法，又具备解决现代经济特别是金融领域中实际问题的技能，既具有国际视野同时也了解中国国情的高素质复合型经济和金融人才。
-			</p>
-			<div class="bottom">
-				<span>专业优势</span>
-				<span>培养方案</span>
-				<span>师资力量</span>
-			</div>
-		</a>
-		<a href="" class="content_left fr">
-			<div class="top">
-				<span>本科教学</span>
-				<span class="one_cut">会计学专业</span>
-			</div>
-			<p class="center four_cut">培养既掌握国际前沿的会计理论研究方法，通晓全球会计准则和会计制度发展趋势，又熟悉国际国内经济发展与资本市场运作规律的复合型高端会计研究和实践人才。</p>
-			<div class="bottom">
-				<span>专业优势</span>
-				<span>培养方案</span>
-				<span>师资力量</span>
-			</div>
-		</a>
-	</section>
-	<!-- 新闻部分 -->
-	<div class="news-warp">
-		<div class="ty-title">新闻中心</div>
-		<div class="new news-swiper-container">
-			<div class="swiper-wrapper">
-				<div class="swiper-slide new-item">
-					<div class="span">
-						<p class="eight_cut">"中文写作"和 "中文沟通" 课：清华经管学院九年思索与实</p>
-					</div>
-					<a href="javascript">查看详情&nbsp;></a>
-					<img src="./images/new-demo1.png" alt="">
-				</div>
-				<div class="swiper-slide new-item">
-					<div class="span">
-						<p class="eight_cut">白重恩做客"人文清华"讲坛 发表"中国经济何处破局"主题演讲</p>
-					</div>
-					<a href="javascript">查看详情&nbsp;></a>
-					<img src="./images/new-demo2.png" alt="">
-				</div>
-				<div class="swiper-slide new-item">
-					<div class="span">
-						<p class="eight_cut">"中文写作"和 "中文沟通" 课：清华经管学院九年思索与实</p>
-					</div>
-					<a href="javascript">查看详情&nbsp;></a>
-					<img src="./images/swiper3_02.png" alt="">
-				</div>
-				<div class="swiper-slide new-item">
-					<div class="span">
-						<p class="eight_cut">白重恩做客"人文清华"讲坛 发表"中国经济何处破局"主题演讲</p>
-					</div>
-					<a href="javascript">查看详情&nbsp;></a>
-					<img src="./images/swiper2_02.png" alt="">
-				</div>
-			</div>
-		</div>
-	</div>
-	<div class="swiper-pagination news-boll boll"></div>
-	<!-- 新闻列表 -->
-	<section class="newList container">
-		<a href="" class="newText clearfix fl">
-			<div class="left fl">
-				<span class="month">JUN</span>
-				<span class="day">19</span>
-			</div>
-			<p class="p1 two_cut">煮雪共话、静待春浓——经管学院首届班主任、辅导员新春酒会举行</p>
-			<p class="p2 three_cut">
-				中英文双语国际新生学费交费系统是为国际学生（包括国际本科生、国际研究生和非学位项目学生）提供的中英线上学费交费系统，具备信息化、网络化、数字化的特征，可以较好解决国际学生学费无法在线支付问题，</p>
-		</a>
-		<a href="" class="newText clearfix fl">
-			<div class="left fl">
-				<span class="month">JUN</span>
-				<span class="day">30</span>
-			</div>
-			<p class="p1 two_cut">白重恩院长与本科生共品下午茶</p>
-			<p class="p2 three_cut">来自两岸76所高校的大学生运动员代表和体育爱好者代表近千人汇聚清华园，共同见证以“ 更亲、更近、更强”为主题口号的海峡两岸（
-				北京）体育交流运动会隆重开幕。国台办副主任龙明彪</p>
-		</a>
-		<a href="" class="newText clearfix fl">
-			<div class="left fl">
-				<span class="month">JUN</span>
-				<span class="day">07</span>
-			</div>
-			<p class="p1 two_cut">2018年度“清华经管学院陈小悦奖学金”颁奖仪式举行</p>
-			<p class="p2 three_cut">2018年11月30日，2018年度“清华经管学院陈小悦奖学金”颁奖仪式举行。6位本科生和4位研究生获得本年度奖学金。</p>
-		</a>
-	</section>
-
-	<p class="add-more">
-		<a class="ty-more-1" href="">查看所有的新闻 ></a>
-	</p>
 
 	<!-- 学校生活 -->
 	<section class="school_life">
@@ -333,7 +223,7 @@
 			<div class="swiper-wrapper">
 				<div class="student_min fl swiper-slide">
 					<a href="" class="in">
-						<img src="./images/student_name1.png" alt="">
+						<img src="./images/new/index-4.png" alt="">
 						<i class="left"></i>
 						<i class="right"></i>
 						<p class="p1"> <span>夏劼斐</span>&nbsp;&nbsp;<span>2014级</span></p>
@@ -342,7 +232,7 @@
 				</div>
 				<div class="student_min fl swiper-slide">
 					<a href="" class="in">
-						<img src="./images/student_name2.png" alt="">
+						<img src="./images/new/index-3.png" alt="">
 						<i class="left"></i>
 						<i class="right"></i>
 						<p class="p1"> <span>岳汉超</span>&nbsp;&nbsp;<span>2016级</span></p>
@@ -351,7 +241,7 @@
 				</div>
 				<div class="student_min fl swiper-slide">
 					<a href="" class="in">
-						<img src="./images/student_name3.png" alt="">
+						<img src="./images/new/index-5.png" alt="">
 						<i class="left"></i>
 						<i class="right"></i>
 						<p class="p1"> <span>张塞</span>&nbsp;&nbsp;<span>2014级</span></p>
@@ -443,43 +333,6 @@
 			swiperStudent.autoplay.stop();
 		}).mouseleave(function () {
 			swiperStudent.autoplay.start();
-		});
-
-		var swiperNews;
-		if (document.body.clientWidth >= 1024) {
-			swiperNews = new Swiper('.news-swiper-container', {
-				slidesPerView: 2,
-				spaceBetween: 30,
-				pagination: {
-					el: '.news-boll',
-					clickable: true,
-				},
-				grabCursor: true,
-				speed: 1000,
-				paginationClickable: true,
-				autoplay: {
-					delay: 3000
-				}
-			});
-		} else {
-			swiperNews = new Swiper('.news-swiper-container', {
-				slidesPerView: 1,
-				pagination: {
-					el: '.news-boll',
-					clickable: true,
-				},
-				speed: 1000,
-				paginationClickable: true,
-				autoplay: {
-					delay: 3000
-				}
-			});
-		}
-
-		$(".news-swiper-container").mouseenter(function () {
-			swiperNews.autoplay.stop();
-		}).mouseleave(function () {
-			swiperNews.autoplay.start();
 		});
 	</script>
 </body>
