--- a/web-tsu2/practice.html
+++ b/web-tsu2/practice.html
@@ -74,9 +74,9 @@
 	</nav>
   <!-- 顶部banner -->
   <div class="ty-banner">
-    <img class="banner-img" src="./images/new/banner-sj.png" alt="">
+    <img class="banner-img" src="./images/new/bac-5.png" alt="">
     <div class="container-2">
-        <h2>社会实践</h2>
+        <h2>项目活动</h2>
     </div>
     <div class="nav-list"></div>
   </div>
@@ -84,7 +84,7 @@
   <!-- 列表1 -->
   <section class="newList container ty-practice">
 		<a href="" class="newText clearfix fl">
-      <div class="img"><img src="./images/new/school-item2.png" alt=""></div>
+      <div class="img"><img src="./images/new/activity-1.png" alt=""></div>
 			<div class="left fl">
 				<span class="month">JUN</span>
 				<span class="day">19</span>
@@ -94,7 +94,7 @@
 			<p class="p2 three_cut">中英文双语国际新生学费交费系统是为国际学生（包括国际本科生、国际研究生和非学位项目学生）提供的中英线上学费交费系统，具备信息化、网络化、数字化的特征，可以较好解决国际学生学费无法在线支付问题，</p>
 		</a>
 		<a href="" class="newText clearfix fl">
-      <div class="img"><img src="./images/new/school-item2.png" alt=""></div>
+      <div class="img"><img src="./images/new/activity-1.png" alt=""></div>
 			<div class="left fl">
 				<span class="month">JUN</span>
 				<span class="day">30</span>
@@ -104,7 +104,7 @@
 			<p class="p2 three_cut">来自两岸76所高校的大学生运动员代表和体育爱好者代表近千人汇聚清华园，共同见证以“ 更亲、更近、更强”为主题口号的海峡两岸（ 北京）体育交流运动会隆重开幕。国台办副主任龙明彪</p>
 		</a>
 		<a href="" class="newText clearfix fl">
-      <div class="img"><img src="./images/new/school-item2.png" alt=""></div>
+      <div class="img"><img src="./images/new/activity-1.png" alt=""></div>
 			<div class="left fl">
 				<span class="month">JUN</span>
 				<span class="day">07</span>
